Fix some layout problems

--- a/frontend/src/app/modules/login-other/other-page/other-page/other-page.component.sass
+++ b/frontend/src/app/modules/login-other/other-page/other-page/other-page.component.sass
@@ -14,11 +14,6 @@
       flex-direction: row 
       align-items: center
       grid-gap: 7px
-  .logo>.image:after
-    content: 'For artists'
-    color: $light-orange
-    font-size: 22px
-    font-family: 'Helvetica,Arial,sans-serif'
 
 .main-content
   display: flex
@@ -30,8 +25,10 @@
   width: 100%
   height: 90%
   overflow: hidden
-  h1,h5,span
+  h1
     color: $light-orange
+  h5 
+    color: $text-color-gray
   .cards
     display: flex
     flex-direction: row
@@ -53,6 +50,7 @@
         border-radius: 100%
       span
         font-size: 19px
+        color: white
     .option-card:hover
       cursor: pointer
       background: $light-gray
